added media queries

--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Adam Levine</title>
+
+  
   <link rel="stylesheet" href="css/main.css" />
+
+
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 
 <body>
   <div id="wrapper">
     <!-- navigation -->
+    <header>
+      <div class="skip-content">
+        <a href="#about">Skip to content</a>
+      </div>
     <nav>
       <div class="logo">
         <a href="index.html">
@@ -23,9 +32,10 @@
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="shows.html">Shows</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="#about">Skip to content</a></li>
+     
       </ul>
     </nav>
+  </header>
 
     <main>
 
@@ -91,15 +101,15 @@
         </ul>
         <a class="btn left-align" href="shows.html">Check Out Shows<i class="fa fa-long-arrow-right"></i></a>
       </section>
-
+      <span class="bg-text-gallery"></span>
       <!-- gallery section -->
       <section class="gallery" id="gallery">
         <h2>Gallery</h2>
         <div class="photo-gallery-container">
 
-          <img class="photo_gallery" src="images/show2.jpg" alt="gallery" />
-          <img class="photo_gallery" src="images/hero.png" alt="gallery" />
-          <img class="photo_gallery" src="images/show3.jpg" alt="gallery" />
+          <img class="photo_gallery" src="images/show2.jpg" alt="Adam Levine" />
+          <img class="photo_gallery" src="images/hero.png" alt="Adam Levine singin" />
+          <img class="photo_gallery" src="images/show3.jpg" alt="Adam Levine posing" />
         </div>
         <a class="btn right-aligned-link" href="gallery.html">Check Out Gallery<i
             class="fa fa-long-arrow-right"></i></a>
