--- a/shows.html
+++ b/shows.html
@@ -15,6 +15,10 @@
   <body>
     <div id="wrapper">
       <!-- navigation -->
+      <header>
+        <div class="skip-content">
+          <a href="#table">Skip to content</a>
+        </div>
       <nav>
         <div class="logo">
           <a href="index.html">
@@ -25,9 +29,10 @@
           <li><a href="index.html">Home</a></li>
           <li class="active"><a href="shows.html">Shows</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="#about">Skip to content</a></li>
+       
         </ul>
       </nav>
+    </header>
 
       <main>
 
